# priv

./: .gitignore  README.md  bash_env  beginwork  commitwork  endwork  gitset  list  setup.sudo
android/: adbroot  adbshell  build_tips.txt  env.source  forward_3232.sh  kernel_config_sdk  save_kernel.sh  start_emulator.sh
android/VideoNode/: settings.gradle
android/lkm_acts/: .Module.symvers.cmd  .includes.txt.swp  .lkm_acts.ko.cmd  .lkm_acts.lto.o.cmd  .lkm_acts.mod.cmd  .lkm_acts.mod.o.cmd  .lkm_acts.o.cmd  .lkm_acts.o.d  .modules.order.cmd  Makefile  includes.txt  lkm_acts.c  lkm_acts.ko  lkm_acts.mod  lkm_acts.mod.c  modules.order
apse/: CMakeLists.txt  apse.drawio  initbuild  mk
apse/apse/: CMakeLists.txt  apse_main.cc  gena.cc  gena.hh
apse/comli/: CMakeLists.txt  comli_main.cc
apse/gencode/: Gena.g4  gena.interp  gena.ne  genaLexer.interp  genaLexer.tokens  old.back  test.gena  test.sh
apse/gencode/gena/: Gena.interp  GenaLexer.interp  GenaLexer.py  GenaLexer.tokens  GenaListener.py  GenaParser.py
apse/gencode/python/: __init__.py  _cogio.py  ast.py  codeout.py  dg.py
apse/libapse/: CMakeLists.txt  libapse.cc
apse/libapse/include/: libapse.hh  libapse_svr.hh
apse/libcomfl/: CMakeLists.txt  ccstr.cc  libcomfl.cc
apse/libcomfl/include/: cfstore.hh  comfl_concurrency.hh  comfl_datatype.hh  comfl_datatype_defs.hh  comfl_imm.hh  comfl_metacode.hh  comfl_shmem.hh  comfl_utils.hh  libcomfl.hh
apse/parsers/: CMakeLists.txt  apse.yaml  apse_ast1.cc  apse_ast1.hh  apse_ast2.cc  apse_ast2.hh  apse_lang  apse_lang.tx  apse_lang_bench.cpp  apse_lang_defs.hh  apse_lang_intf.js  apse_lang_intf.py  apse_obj.js  apse_obj.py  apse_tokenizer.hh  apse_tokenizer_benchmark.cc  apsemodule.python.cpp  otherbench.cpp  test.cc  tokenizer.cpp
common/: setup
common/cpp/: CMakeLists.txt  a.out  compile.sh  initbuild  linearprobing.cu  linearprobing.h  massif.out  mk.sh  mt_hmap.hh  mt_test_main.cc  mt_unidata.hh  mt_utils.cc  mt_utils.hh  mt_utils_avx2.cc
common/css/: bootstrap.css  bootstrap.css.map  bootstrap.min.css  bootstrap.min.css.map
common/js/: bootstrap.js  bootstrap.js.map  bootstrap.min.js  bootstrap.min.js.map  escodegen.browser.js  escodegen.browser.min.js  esprima.js  immutable.js  jquery.js  ksp.js  ksp_rework.js  ksp_rw.js  lcs_cascade.js  moo.js  popper.js  popper.js.map  popper.min.js  popper.min.js.map  qs.js  relationframework.js  utils.js  vscode_debug.js
common/licenses/: bootstrap.LICENSE  escodegen.LICENSE.BSD  esprima.LICENSE.BSD  immutable.LICENSE  jquery.LICENSE.txt  moo.LICENSE  qs.LICENSE
db/: CMakeLists.txt
db/aims/: 06-22-20-tasks.mm  AIMS.mm  Accesses.mm  DB.mm  New Mindmap.mm  Paradigm Flow Language.mm  Tau.xlsx  aimn.js  aroot.mm  aroot.xml  cppdbg.sh  design.mm  diagram-dataflow.drawio  doceditor.drawio  doceditor.htm  json.js  notes.txt  relationframework  src_node.js  src_node.ne  src_nsyn.js  src_nsyn.ne  svtime.mm  svtime.xml  test_content.txt  webpack.config.js
db/dbend/: CMakeLists.txt  api.cc  design.txt  design2.txt  fdb.hh  listable.hh  main_test.cc  main_test1.cc  mcode_def.hh  opi.hh  protocol.txt  protocol.yaml  sym.hh  vmacro.hh  vocab.hh  web.app.cc
db/dbfront/: a2-setup.sh  apache2.conf  dbfront
db/lib/: cfgspec.js  common  vfldb.cc  vfldb_benchmark.cc  vscd.js  vscode_debug.js  wctest.js
db/sfu/: .~lock.Designs.docx#  Designs.docx  SfuVerb.js  cppdbg.sh  docurenderer.js  emailclients.json  index.desc  index.js  mo.js  readme.txt  root.desc  sfu.desc  sfu.fwork  sfu.js  sfumodel.desc  sfumodel.js  tags.csv  treedict.js  ui.desc  ui.js  webflow.desc  webflow.new.desc
docs/: Android.md  GStreamer.md  OpenWrt.md
ee/: ee.html  ee.js  reqflow.drawio  reqflow1.drawio
gendb/: CMakeLists.txt  client_compiler_main.cpp  cxxopts.hpp  db_mmap.h  flow.cpp  flow.h  flow_common_defs.h  flow_keysp.h  flow_value.h  gdb_setenv  gendb.drawio  gendb.mm  hmsg.pb.cc  hmsg.pb.h  hmsg.proto  initbuild  libhook.cpp  libhook.h  msg.h  mt_hmap.hh  mt_mmap.cpp  mt_mmap.h  mt_unidata.hh  mt_utils.cc  mt_utils.hh  tokener.hpp
htdb/include/: amsg.h
htdb/schema/: schema.py
ibackupdir/: ibackupdir.js
mediarec/: CMakeLists.txt  imgui.ini  initbuild
mediarec/src/: CMakeLists.txt  be_glfw_vulkan.cc  gui.hh  mediarec.hh  mediarec_main.cc  mediarec_video_linux.cc  props.hh
ngi/: .gitignore  CMakeLists.txt  README.md  ngi.drawio
ngi/libngi/: dbcmd.h  dbcmd.py  dbctx.cpp  (+2 more)
pica/: meson.build
pica/include/: pica_mem.h  pica_msg.h  pica_util.h
pica/mem/: pica_mem.cpp
pica/tests/: test_pica_mem.cpp
pytools/: cursorpos.py  pyqt5gui.py
sage/: CMakeLists.txt  imgui.ini  initbuild
sage/appsage/: CMakeLists.txt  appsage_main.cc  sage_resources.h
sage/backup/: genaspec.back
sage/libsage/: CMakeLists.txt  libsage.cc  libsage_flowmgr.cc  libsage_shmem.cc
sage/libsage/include/: libsage.hh  libsage_co.hh  libsage_concurrency.hh  libsage_flow.hh  libsage_shmem.hh
sage/parsers/: Gena.g4  Gena2.g4  GenaOld.g4  GenaTest.g4  test.gena  test.sh  test2.gena  test3.gena  test4.gena
sage/websage/: Fip  client.html  encmsg.proto  flow  mk  package-lock.json  server.html  textedit.drawio  tsconfig.json  webpack.config.js  webpack.config.js.back  websage.mm  wss_repeater.js
sage/websage/src/: ddd.back  ddd.js  encmsg_pb.js  engine.ts  genaspec.ts  sage_gen.ts  scope_exec.back  scope_exec.back2  scope_exec.js  test_exec.js  utils.js  wsmsg.js
sage/websage/src/gena/: Gena.g4  Gena.interp  Gena.tokens  GenaLexer.interp  GenaLexer.js  GenaLexer.ts  GenaListener.js  GenaListener.ts  GenaParser.js  GenaParser.ts
sagen/: CMakeLists.txt  compile.sh  designs.drawio  initbuild  mkall.sh  mkbin.sh  mkweb.sh  sagen.drawio  sagen.mm  sagen_datarel.mm
sagen/src/: CMakeLists.txt  mt_utils.cc  mt_utils.hh  mt_utils_avx2.cc  sagen_noweb.cc  sagen_runtime.cc  sagen_runtime.hh  sagen_test_main.cc  sagen_webmain.cc
screenoverlay/: screenoverlay.py
scrsvr/: cppdbg.sh  scrsvr.cc  vroot.h
videonode/: CMakeLists.txt
webfw/: clang-wasm-debug  flob.js  flow.mm  table.js  wf.html  wf.js  wf_alt.js  wf_alt_back.js  wlib.cc  wlib.wasm
(+188 files in other folders)
